--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 Can they do that?  Yes, yes they can!
 </font>
 <p>
-Looking for <a href="http://www.cityscout.us">CityScout</a> or <a href="http://thayer.b2si.com">Charles Thayer</a>?
+Looking for <a href="http://thayer.b2si.com">Charles Thayer</a>?
 </td>
 
 </tr>
